# training-image-dnn

./: .gitignore  Makefile  README.md  pyproject.toml
src/: prepare.py  test.py  train.py  train_date.py  train_imagenette.py  train_lenet.py  train_mnist.py  train_ms_coco.py
src/common/: base_model.py  config.py  functions.py  np.py  optimizers.py  trainer.py
src/common/layers/: __init__.py  add_and_norm.py  attention.py  averate_pooling.py  convolution.py  embedding.py  feed_forward.py  layer_normalization.py  linear.py  max_pooling.py  relu.py  softmax.py  softmax_with_loss.py
src/common/utils/: __init__.py  bmm.py  clip_grads.py  create_positional_encoding.py  data.py  eval_perplexity.py  remove_duplicate.py  tensor_converter.py
src/dataset/date/: const.py  date_data.py  date_trainer.py  load_date.py
src/dataset/imagenette/: const.py  download.py  image_caches.py  image_info.py  imagenette_data.py  imagenette_trainer.py
src/dataset/mnist/: const.py  download.py  mnist_data.py  mnist_trainer.py
src/dataset/ms_coco/: caption.py  const.py  download.py  image_cache.py  main.py  ms_coco_data.py  ms_coco_trainer.py  show_image.py  used_image_id.py
src/model/Lenet/: main.py
src/model/LenetWithNorm/: main.py  norm_and_relu.py
src/model/date/: decoder.py  decoder_sub_layer.py  encoder.py  encoder_sub_layer.py  main.py
src/model/imagenette/: main.py
src/model/imagenette_v2/: main.py  (+1 more)
src/pytorch/: README.md  main.py  main_lightning.py
src/tests/: main.py  test_bmm.py  test_embedding.py  test_layer_normalization.py  test_numerical_gradient.py  utils.py
(+23 files in other folders)
