[tool.poetry]
name = "image-captioning-from-scratch"
version = "0.1.0"
description = ""
authors = ["hayato.shishido <hayato.shishido@ghelia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
Pillow = "^9.1.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
matplotlib = "^3.5.1"
pytorch-lightning = "^1.6.1"
hydra-core = "^1.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
